# HypotheX-TS

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  REVIEW.md
.claude/: settings.json  settings.local.json
backend/: requirements.txt
benchmarks/: README.md
docs/: domain-config-note.md  pilot-readiness-note.md  real-asset-runbook.md  shared-contracts-note.md  suggestion-stabilization-note.md
docu/: API-Spec.md
evaluation/: README.md  __init__.py  baselines.py  harness.py  io.py  metrics.py  pilot-scenarios.json  pilot_readiness.py  run_fixture_evaluation.py  run_pilot_readiness_check.py  segmentation_eval.py  telemetry.py
frontend/: index.html  package-lock.json  package.json
model/: README.md  __init__.py
schemas/: README.md  constraint-evaluation.schema.json  contract-index.json  domain-config.schema.json  operation-invoke.schema.json  operation-legality.schema.json  operation-result.schema.json  segment-statistics.schema.json  semantic-segmentation.schema.json  session-log.schema.json  suggestion-proposal.schema.json  time-series.schema.json  typed-operation.schema.json
scripts/: README_setup_benchmarks.md  setup_benchmarks.py  train_tcn_encoder.py
study/: README.md  build_replication_package.sh  deviations.md  preregistration.md
study/analysis/: 00-make-processed-data.R  01-primary-h1-glmer.Rmd  02-primary-h2-tost.R  03-secondary-h3-h4-glmer.Rmd  04-bayesian-companion.Rmd  05-trust-calibration-brier.R  06-exploratory.Rmd  07-figures.Rmd  08-tables.Rmd  Dockerfile  Makefile  _constants.R  make_synthetic.R  pyproject.toml
tickets/: README.md
(+707 files in other folders)
